# buddy

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  technical_task.md
.github/workflows/: ci.yml  deploy-pages.yml
.trunk/: trunk.yaml
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/routes/: avatar.py  conversations.py  health.py  memories.py  voice.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/schemas/: conversation.py  memory.py
apps/api/app/services/: ai_service.py  conversation_service.py  memory_service.py  voice_service.py
apps/api/app/tests/: test_ai_service.py  test_conversations.py  test_health.py  test_voice.py
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  providers.tsx
apps/web/components/avatar/: AvatarCanvas.tsx  AvatarScene.tsx
apps/web/components/chat/: ConversationList.tsx  MessageInput.tsx  MessageList.tsx
apps/web/components/layout/: Header.tsx  Shell.tsx  Sidebar.tsx
apps/web/components/memory/: MemoryItem.tsx  MemoryPanel.tsx
docs/: api-contract.md  architecture.md  avatar-design.md  development-plan.md  github-workflow.md  memory-design.md  product-vision.md  security-and-privacy.md  voice-design.md
docs/decisions/: 0001-architecture.md
infra/: docker-compose.yml
scripts/: dev.sh  setup.sh  wsl-sync.sh
(+13 files in other folders)
